@@ -89,6 +89,8 @@
 		<Unit filename="src/wxSHA1/wxSHA1.h" />
 		<Extensions>
 			<code_completion />
+			<envvars />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
